--- a/index.html
+++ b/index.html
@@ -1,294 +1,138 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Donate iPAGroove</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --primary-red: #EE1D52; /* Основной акцентный красный (как TikTok) */
-            --primary-blue: #00F2EA; /* Основной акцентный бирюзовый */
-            --dark-background: #1a1a2e; /* Более мягкий темный фон */
-            --card-background: rgba(255, 255, 255, 0.1); /* Прозрачный белый для карточек */
-            --card-border: rgba(255, 255, 255, 0.3); /* Граница карточек */
-            --text-color: #f0f0f0; /* Светлый текст */
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Donate iPAGroove</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', sans-serif;
+    }
 
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Open Sans', sans-serif;
-            color: var(--text-color);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            /* Изменил фон на более динамичный градиент */
-            background: linear-gradient(135deg, #1a1a2e, #1a1a2e, #16213e, #0f3460);
-            background-size: 400% 400%;
-            animation: gradientAnimation 15s ease infinite;
-            overflow: hidden; /* Скрываем общий оверфлоу */
-            position: relative;
-        }
+    body {
+      height: 100vh;
+      background: linear-gradient(135deg, #1e1e3f, #3a1f47, #241e30);
+      background-size: 400% 400%;
+      animation: gradientMove 15s ease infinite;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
-        @keyframes gradientAnimation {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
+    @keyframes gradientMove {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
 
-        /* Динамичный фон: Пузыри / Элементы */
-        .background-elements {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-            z-index: 0;
-        }
+    .donate-container {
+      background: rgba(255, 255, 255, 0.05);
+      padding: 30px;
+      border-radius: 20px;
+      backdrop-filter: blur(20px);
+      box-shadow: 0 8px 32px rgba(0,0,0,0.3);
+      text-align: center;
+      width: 90%;
+      max-width: 600px;
+    }
 
-        .background-elements span {
-            position: absolute;
-            display: block;
-            list-style: none;
-            background: rgba(var(--primary-red), 0.15); /* Чуть более яркий красный */
-            animation: animate 25s linear infinite;
-            bottom: -150px;
-            border-radius: 50%; /* Все элементы круглые */
-            opacity: 0.7;
-        }
+    .donate-container h1 {
+      color: #fff;
+      font-size: 28px;
+      margin-bottom: 20px;
+      letter-spacing: 1px;
+    }
 
-        .background-elements span:nth-child(even) {
-            background: rgba(var(--primary-blue), 0.15); /* Бирюзовый для четных */
-        }
+    .icon-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 16px;
+    }
 
-        .background-elements span:nth-child(1) { left: 25%; width: 80px; height: 80px; animation-delay: 0s; }
-        .background-elements span:nth-child(2) { left: 10%; width: 20px; height: 20px; animation-delay: 2s; animation-duration: 12s; }
-        .background-elements span:nth-child(3) { left: 70%; width: 20px; height: 20px; animation-delay: 4s; }
-        .background-elements span:nth-child(4) { left: 40%; width: 60px; height: 60px; animation-delay: 0s; animation-duration: 18s; }
-        .background-elements span:nth-child(5) { left: 65%; width: 20px; height: 20px; animation-delay: 0s; }
-        .background-elements span:nth-child(6) { left: 75%; width: 110px; height: 110px; animation-delay: 3s; }
-        .background-elements span:nth-child(7) { left: 35%; width: 150px; height: 150px; animation-delay: 7s; }
-        .background-elements span:nth-child(8) { left: 50%; width: 25px; height: 25px; animation-delay: 15s; animation-duration: 45s; }
-        .background-elements span:nth-child(9) { left: 20%; width: 15px; height: 15px; animation-delay: 2s; animation-duration: 35s; }
-        .background-elements span:nth-child(10) { left: 85%; width: 150px; height: 150px; animation-delay: 11s; }
+    .icon-link {
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 12px;
+      padding: 10px;
+      width: 120px;
+      text-decoration: none;
+      color: #fff;
+      text-align: center;
+      transition: 0.3s ease;
+    }
 
-        @keyframes animate {
-            0% { transform: translateY(0) rotate(0deg) scale(1); opacity: 0.8; }
-            100% { transform: translateY(-1000px) rotate(720deg) scale(0.5); opacity: 0; }
-        }
+    .icon-link:hover {
+      background: rgba(255, 255, 255, 0.2);
+      transform: translateY(-4px);
+    }
 
-        .main-content {
-            z-index: 2;
-            text-align: center;
-            /* Более светлый и прозрачный фон для окна */
-            background: var(--card-background);
-            padding: 40px 60px;
-            border-radius: 20px; /* Больше закругления */
-            /* Более мягкая и цветная тень */
-            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.5), 0 0 30px var(--primary-red);
-            backdrop-filter: blur(15px); /* Сильнее размытие */
-            border: 1px solid var(--card-border); /* Более заметная граница */
-            max-width: 95%; /* Лучшая адаптивность для ширины */
-            width: fit-content; /* Ширина по содержимому */
-            box-sizing: border-box;
-        }
+    .icon-img {
+      width: 50px;
+      height: 50px;
+      object-fit: contain;
+      margin-bottom: 8px;
+      border-radius: 8px;
+    }
 
-        h1 {
-            font-family: 'Montserrat', sans-serif;
-            font-size: 3.5em;
-            margin-bottom: 25px; /* Увеличил отступ */
-            text-shadow: 3px 3px 15px rgba(0, 0, 0, 0.7); /* Более выраженная тень текста */
-            letter-spacing: 2px;
-            color: var(--text-color);
-            line-height: 1.2;
-        }
+    .icon-link span {
+      font-size: 14px;
+      display: block;
+    }
 
-        .icon-container {
-            margin-top: 30px;
-            display: flex;
-            justify-content: center;
-            gap: 25px;
-            flex-wrap: nowrap;
-            overflow-x: auto; /* Позволяем горизонтальную прокрутку */
-            padding-bottom: 15px; /* Отступ для красивой прокрутки */
-            min-width: fit-content;
-            min-width: -moz-fit-content;
+    @media (max-width: 480px) {
+      .icon-link {
+        width: 100px;
+        padding: 8px;
+      }
 
-            /* Красивая прокрутка */
-            scrollbar-width: thin; /* Firefox: тонкий скроллбар */
-            scrollbar-color: var(--primary-red) transparent; /* Firefox: цвет скроллбара */
-        }
+      .icon-img {
+        width: 40px;
+        height: 40px;
+      }
 
-        /* Webkit-браузеры (Chrome, Safari): стили для скроллбара */
-        .icon-container::-webkit-scrollbar {
-            height: 8px; /* Высота скроллбара */
-            background-color: transparent; /* Фон скроллбара прозрачный */
-        }
-
-        .icon-container::-webkit-scrollbar-thumb {
-            background-color: var(--primary-red); /* Цвет ползунка */
-            border-radius: 4px; /* Закругленные углы ползунка */
-            border: 2px solid transparent; /* Граница, чтобы ползунок был чуть меньше */
-            background-clip: padding-box; /* Фон только внутри границы */
-        }
-
-        .icon-container::-webkit-scrollbar-thumb:hover {
-            background-color: var(--primary-blue); /* Цвет ползунка при наведении */
-        }
-
-        .icon-link {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-decoration: none;
-            color: var(--text-color);
-            font-size: 1.1em;
-            font-weight: 600;
-            transition: all 0.3s ease;
-            cursor: pointer;
-            text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
-            flex-shrink: 0;
-            padding: 5px;
-        }
-
-        .icon-link .icon-img {
-            width: 90px;
-            height: 90px;
-            object-fit: contain;
-            margin-bottom: 10px;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            border-radius: 20%;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.4); /* Более выраженная тень */
-            background-color: rgba(255, 255, 255, 0.1); /* Чуть более заметный фон для иконки */
-            padding: 8px; /* Немного больший внутренний отступ */
-        }
-
-        .icon-link:hover .icon-img {
-            transform: scale(1.15) translateY(-8px); /* Увеличил эффект при наведении */
-            box-shadow: 0 0 35px var(--primary-blue); /* Яркая тень при наведении, используем бирюзовый */
-        }
-
-        .icon-link:hover {
-            color: var(--primary-blue); /* Цвет текста меняется на бирюзовый при наведении */
-        }
-
-        /* Медиа-запросы для адаптивности */
-        @media (max-width: 768px) {
-            .main-content {
-                padding: 30px 40px;
-                border-radius: 15px; /* Чуть меньше закругления на мобильных */
-            }
-            h1 {
-                font-size: 2.8em;
-                margin-bottom: 20px;
-            }
-            .icon-container {
-                gap: 15px;
-            }
-            .icon-link .icon-img {
-                width: 70px;
-                height: 70px;
-                padding: 6px;
-            }
-            .icon-link {
-                font-size: 1em;
-            }
-        }
-
-        @media (max-width: 600px) {
-            h1 {
-                font-size: 2.2em;
-                margin-bottom: 15px;
-                letter-spacing: 1px;
-            }
-            .main-content {
-                padding: 25px;
-                margin: 15px;
-                box-shadow: 0 10px 25px rgba(0, 0, 0, 0.6); /* Меньше тень на мобильных */
-            }
-            .icon-container {
-                gap: 10px;
-                padding-bottom: 10px;
-            }
-            .icon-link {
-                font-size: 0.9em;
-            }
-            .icon-link .icon-img {
-                width: 60px;
-                height: 60px;
-                margin-bottom: 5px;
-                padding: 5px;
-            }
-            .background-elements span {
-                width: 40px !important;
-                height: 40px !important;
-            }
-        }
-
-        @media (max-width: 480px) {
-            h1 {
-                font-size: 1.8em;
-            }
-            .main-content {
-                padding: 20px;
-                margin: 10px;
-            }
-            .icon-link .icon-img {
-                width: 50px;
-                height: 50px;
-            }
-        }
-    </style>
+      .donate-container h1 {
+        font-size: 22px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="background-elements">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
+  <div class="donate-container">
+    <h1>Donate iPAGroove</h1>
+    <div class="icon-grid">
+      <a href="ССЫЛКА_НА_ПРИВАТ" class="icon-link" target="_blank">
+        <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6668.jpeg?raw=true" alt="ПриватБанк" class="icon-img">
+        <span>ПриватБанк</span>
+      </a>
+
+      <a href="ССЫЛКА_НА_МОНОБАНК" class="icon-link" target="_blank">
+        <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6669.jpeg?raw=true" alt="Монобанк" class="icon-img">
+        <span>Монобанк</span>
+      </a>
+
+      <a href="ССЫЛКА_НА_PAYPAL" class="icon-link" target="_blank">
+        <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6667.jpeg?raw=true" alt="PayPal" class="icon-img">
+        <span>PayPal</span>
+      </a>
+
+      <a href="ССЫЛКА_НА_BINANCE" class="icon-link" target="_blank">
+        <img src="https://github.com/iPAGroove/igroove/blob/main/images/binance.png?raw=true" alt="Binance" class="icon-img">
+        <span>Binance (USDT)</span>
+      </a>
+
+      <a href="ССЫЛКА_НА_ABANK" class="icon-link" target="_blank">
+        <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6670.jpeg?raw=true" alt="ABank" class="icon-img">
+        <span>ABank</span>
+      </a>
+
+      <a href="ССЫЛКА_НА_TELEGRAM_WALLET" class="icon-link" target="_blank">
+        <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6672.jpeg?raw=true" alt="Telegram Wallet" class="icon-img">
+        <span>Telegram Wallet</span>
+      </a>
     </div>
-
-    <div class="main-content">
-        <h1>Donate iPAGroove</h1>
-        <div class="icon-container">
-            <a href="ВАША_ССЫЛКА_НА_ПРИВАТБАНК" class="icon-link" target="_blank">
-                <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6668.jpeg?raw=true" alt="ПриватБанк" class="icon-img">
-                <span>ПриватБанк</span>
-            </a>
-
-            <a href="ВАША_ССЫЛКА_НА_МОНОБАНК" class="icon-link" target="_blank">
-                <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6669.jpeg?raw=true" alt="Монобанк" class="icon-img">
-                <span>Монобанк</span>
-            </a>
-
-            <a href="ВАША_ССЫЛКА_НА_PAYPAL" class="icon-link" target="_blank">
-                <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6667.jpeg?raw=true" alt="PayPal" class="icon-img">
-                <span>PayPal</span>
-            </a>
-
-            <a href="ВАША_ССЫЛКА_НА_BINANCE" class="icon-link" target="_blank">
-                <img src="https://github.com/iPAGroove/igroove/blob/main/images/binance.png?raw=true" alt="Binance" class="icon-img">
-                <span>Binance (USDT)</span>
-            </a>
-
-            <a href="ВАША_ССЫЛКА_НА_ABANK" class="icon-link" target="_blank">
-                <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6670.jpeg?raw=true" alt="ABank" class="icon-img">
-                <span>ABank</span>
-            </a>
-
-            <a href="ВАША_ССЫЛКА_НА_TELEGRAM_WALLET" class="icon-link" target="_blank">
-                <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6672.jpeg?raw=true" alt="Telegram Wallet" class="icon-img">
-                <span>Telegram Wallet</span>
-            </a>
-
-            </div>
-    </div>
+  </div>
 </body>
 </html>
