--- a/index.html
+++ b/index.html
@@ -14,78 +14,91 @@
 
     body {
       height: 100vh;
-      background: linear-gradient(135deg, #1e1e3f, #3a1f47, #241e30);
-      background-size: 400% 400%;
-      animation: gradientMove 15s ease infinite;
+      background: linear-gradient(120deg, #8e2de2, #4a00e0);
+      background-size: 300% 300%;
+      animation: moveGradient 15s ease infinite;
       display: flex;
       justify-content: center;
       align-items: center;
+      padding: 20px;
     }
 
-    @keyframes gradientMove {
+    @keyframes moveGradient {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
 
     .donate-container {
-      background: rgba(255, 255, 255, 0.05);
-      padding: 30px;
-      border-radius: 20px;
-      backdrop-filter: blur(20px);
-      box-shadow: 0 8px 32px rgba(0,0,0,0.3);
+      background: rgba(255, 255, 255, 0.08);
+      padding: 24px;
+      border-radius: 24px;
+      backdrop-filter: blur(18px);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+      width: 100%;
+      max-width: 500px;
       text-align: center;
-      width: 90%;
-      max-width: 600px;
     }
 
-    .donate-container h1 {
-      color: #fff;
-      font-size: 28px;
+    h1 {
+      color: white;
+      font-size: 24px;
       margin-bottom: 20px;
       letter-spacing: 1px;
     }
 
-    .icon-grid {
+    .icon-scroll {
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 16px;
+      overflow-x: auto;
+      gap: 14px;
+      padding-bottom: 4px;
+      scroll-snap-type: x mandatory;
     }
 
     .icon-link {
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 12px;
-      padding: 10px;
-      width: 120px;
-      text-decoration: none;
-      color: #fff;
+      flex: 0 0 auto;
+      scroll-snap-align: center;
+      background: rgba(255, 255, 255, 0.12);
+      border-radius: 14px;
+      padding: 12px;
+      width: 100px;
       text-align: center;
-      transition: 0.3s ease;
+      text-decoration: none;
+      color: white;
+      transition: all 0.3s ease;
     }
 
     .icon-link:hover {
-      background: rgba(255, 255, 255, 0.2);
-      transform: translateY(-4px);
+      background: rgba(255, 255, 255, 0.25);
+      transform: scale(1.05);
     }
 
     .icon-img {
-      width: 50px;
-      height: 50px;
+      width: 48px;
+      height: 48px;
       object-fit: contain;
       margin-bottom: 8px;
-      border-radius: 8px;
+      border-radius: 10px;
     }
 
     .icon-link span {
-      font-size: 14px;
-      display: block;
+      font-size: 13px;
+      word-wrap: break-word;
+    }
+
+    /* Scroll bar hidden for mobile clean look */
+    .icon-scroll::-webkit-scrollbar {
+      display: none;
     }
 
     @media (max-width: 480px) {
+      h1 {
+        font-size: 20px;
+      }
+
       .icon-link {
-        width: 100px;
-        padding: 8px;
+        width: 90px;
+        padding: 10px;
       }
 
       .icon-img {
@@ -93,8 +106,8 @@
         height: 40px;
       }
 
-      .donate-container h1 {
-        font-size: 22px;
+      .icon-link span {
+        font-size: 12px;
       }
     }
   </style>
@@ -102,7 +115,7 @@
 <body>
   <div class="donate-container">
     <h1>Donate iPAGroove</h1>
-    <div class="icon-grid">
+    <div class="icon-scroll">
       <a href="ССЫЛКА_НА_ПРИВАТ" class="icon-link" target="_blank">
         <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6668.jpeg?raw=true" alt="ПриватБанк" class="icon-img">
         <span>ПриватБанк</span>
