--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
     body {
       height: 100vh;
-      background: linear-gradient(120deg, #1b0044, #44006f, #3d0075, #2b004f);
-      background-size: 300% 300%;
-      animation: bgMove 15s ease infinite;
+      background: #1a002d; /* временный фон, заменишь на изображение */
+      background-size: cover;
+      background-position: center;
       font-family: 'Poppins', sans-serif;
       display: flex;
       justify-content: center;
@@ -25,16 +25,15 @@
       padding: 20px;
     }
 
-    @keyframes bgMove {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    .content {
-      text-align: center;
+    .donate-container {
+      background: rgba(255, 255, 255, 0.06);
+      border-radius: 24px;
+      padding: 30px;
       max-width: 600px;
       width: 100%;
+      text-align: center;
+      backdrop-filter: blur(18px);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
     }
 
     h1 {
@@ -43,9 +42,9 @@
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       animation: glow 3s ease-in-out infinite alternate;
-      margin-bottom: 30px;
       font-weight: 700;
       letter-spacing: 1px;
+      margin-bottom: 30px;
     }
 
     @keyframes glow {
@@ -59,7 +58,6 @@
       gap: 24px;
       justify-content: center;
       align-items: center;
-      padding-bottom: 10px;
     }
 
     .icon-item {
@@ -80,8 +78,8 @@
       width: 60px;
       height: 60px;
       object-fit: contain;
-      border-radius: 16px;
-      margin-bottom: 6px;
+      border-radius: 14px;
+      margin-bottom: 8px;
     }
 
     .icon-label {
@@ -95,6 +93,10 @@
     }
 
     @media (max-width: 480px) {
+      .donate-container {
+        padding: 20px;
+      }
+
       h1 {
         font-size: 22px;
       }
@@ -108,11 +110,15 @@
         font-size: 12px;
         max-width: 70px;
       }
+
+      .icon-row {
+        gap: 16px;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="content">
+  <div class="donate-container">
     <h1>Donate iPAGroove</h1>
     <div class="icon-row">
       <a href="ССЫЛКА_НА_ПРИВАТ" class="icon-item" target="_blank">
