--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 
     body {
       height: 100vh;
-      background: #1a002d; /* временный фон, заменишь на изображение */
+      background: url('https://github.com/iPAGroove/igroove/blob/main/images/IMG_6677.jpeg?raw=true') no-repeat center center fixed;
       background-size: cover;
-      background-position: center;
       font-family: 'Poppins', sans-serif;
       display: flex;
       justify-content: center;
