--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
       <a href="ССЫЛКА_НА_BINANCE" class="icon-item" target="_blank">
         <img src="https://github.com/iPAGroove/igroove/blob/main/images/binance.png?raw=true" alt="Binance" class="icon-img">
-        <span class="icon-label">Binance (USDT)</span>
+        <span class="icon-label">Binance</span>
       </a>
 
       <a href="ССЫЛКА_НА_ABANK" class="icon-item" target="_blank">
