--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
       <a href="ССЫЛКА_НА_TELEGRAM_WALLET" class="icon-item" target="_blank">
         <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6672.jpeg?raw=true" alt="Telegram Wallet" class="icon-img">
-        <span class="icon-label">Telegram Wallet</span>
+        <span class="icon-label">Telegram</span>
       </a>
     </div>
   </div>
